# SifaPedal

./: README.md  pyproject.toml  requirements-docs.txt  requirements.txt  zensical.toml
.github/workflows/: docs.yml  release.yml
docs/: CNAME  index.md
docs/stylesheets/: extra.css
packaging/windows/: installer.iss
sifapedal/: __init__.py  __main__.py  core.py  ui.py  utils.py
sifapedal/hooks/: __init__.py  maszyna.py
